<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Message menu">


        <EditTextPreference
            app:dialogMessage="@string/menu_preference_passphrase_dialog"
            app:dialogTitle="@string/menu_preference_passphrase_title"
            app:key="@string/KEY_PASSPHRASE"
            app:title="@string/menu_preference_passphrase_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogMessage="@string/menu_preference_menu_localisation_message"
            app:dialogTitle="@string/menu_preference_menu_localisation_title"
            app:key="@string/KEY_LOCATION"
            app:title="@string/menu_preference_menu_localisation_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogMessage="@string/menu_preference_menu_message_message"
            app:dialogTitle="@string/menu_preference_menu_message_title"
            app:key="@string/KEY_SHOW_MESSAGE"
            app:title="@string/menu_preference_menu_message_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dialogMessage="@string/menu_preference_menu_phone_info_message"
            app:dialogTitle="@string/menu_preference_menu_phone_info_message_title"
            app:key="@string/KEY_PHONE_INFO"
            app:title="@string/menu_preference_menu_phone_info_message_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/menu_preference_menu_alert_help_message" />

        <EditTextPreference
            app:dependency="sync"
            app:dialogMessage="@string/menu_preference_menu_help_message"
            app:dialogTitle="@string/menu_preference_menu_help_title"
            app:key="@string/KEY_HELP"
            app:title="@string/menu_preference_menu_help_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>


</PreferenceScreen>