<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:key="MENU_FRAGMENT_TAG"
        app:summary="@string/main_preference_menu_summary"
        app:title="@string/main_preference_menu"
        app:fragment="ch.rmbi.melsfindmyphone.SettingsActivity$SettingsMenuFragment"
        />



    <PreferenceCategory app:title="@string/main_preference_settings">


        <ListPreference
            app:key="@string/KEY_DATETIME_PATTERN"

            app:entries="@array/datetime_format_desc"
            app:entryValues="@array/datetime_format_values"
            app:title="@string/main_preference_datetime_format"
            app:summary="%s"
            app:useSimpleSummaryProvider="false" />

        <ListPreference
            app:key="@string/KEY_SENDER_VALIDATION_TYPE"
            app:entries="@array/sender_validation_desc"
            app:entryValues="@array/sender_validation_values"
            app:title="@string/main_preference_validation_type"
            app:summary="%s"
            app:useSimpleSummaryProvider="false" />


    </PreferenceCategory>


</PreferenceScreen>